<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/image_realdata"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="65dp"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:layout_centerVertical="true"
        android:src="@drawable/title">

    </ImageView>

    <!--<TextView-->
    <!--android:id="@+id/textView2"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:height="50dp"-->
    <!--android:layout_marginTop="50dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:text="供水管网压力"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="30sp" />-->

    <!--<TextView-->
    <!--android:id="@+id/textView3"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/textView2"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:height="50dp"-->
    <!--android:text="管控系统"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="30sp" />-->

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_realdata"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_bg"
        android:digits="@string/alphabet_and_number"
        android:ems="10"
        android:hint="@string/login_text_username"
        android:inputType="textCapCharacters"
        android:padding="10dp"
        android:text=""
        android:textSize="20sp"
        android:singleLine="true"

        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_username"
        android:layout_alignStart="@+id/et_username"
        android:layout_below="@+id/et_username"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"

        android:background="@drawable/edit_bg"
        android:digits="@string/alphabet_and_number"
        android:ems="10"
        android:hint="@string/login_text_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:text=""
        android:singleLine="true"
        android:textSize="20sp"

        android:imeOptions="actionDone" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_below="@+id/et_password"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        android:layout_alignLeft="@+id/et_username"
        android:layout_alignStart="@+id/et_username"

        android:background="@drawable/login_btn"
        android:text="@string/login_text_login"
        android:textColor="@color/black"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/login_text_copyright"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black"
        android:textSize="14sp" />


</RelativeLayout>
