<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"

        >

        <LinearLayout
            android:id="@+id/change_image"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/wall2"
                imagecontrol:civ_border_color="@color/blue"
                imagecontrol:civ_border_width="1dp" />

            <TextView
                android:id="@+id/tv_userinfo_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout style="@style/Register_Input">

        <TextView
            android:layout_width="100dip"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting_nickname"
            android:textColor="@color/three9"
            android:textSize="18sp"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_userinfo_nickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_vertical"
            android:maxLength="300"
            android:text=""
            android:textColor="#212424"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        style="@style/Register_Input"
        android:layout_marginTop="20dip">

        <TextView
            android:layout_width="100dip"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="@string/setting_password"
            android:textColor="@color/three9"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_userinfo_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:maxLength="300"
            android:text=""
            android:textColor="#212424"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        style="@style/Register_Input"
        android:layout_marginTop="20dip">


        <TextView
            android:layout_width="100dip"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="@string/setting_remark"
            android:textColor="@color/three9"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_userinfo_remark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_vertical"
            android:maxLength="300"
            android:text=""
            android:textColor="#212424"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_userinfo_logout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="退出登陆"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <!--<Button-->
    <!--android:id="@+id/updatePassword"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="@dimen/base_action_bar_height"-->
    <!--android:layout_margin="@dimen/activity_vertical_margin"-->
    <!--android:background="@drawable/btn_login_selector"-->
    <!--android:text="@string/setting_button_updatepw"-->
    <!--android:textColor="@color/white"-->
    <!--android:textSize="@dimen/text_size_large" />-->


</LinearLayout>